cleaned up unused files and fixed up readme